paid/force-app/main/default/objects/PAID_Product_Field_Mapping__mdt/PAID_Product_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Manages field mappings between Salesforce Product/PricebookEntry/BlockPrice and PAID Product API</description>
    <label>PAID Product Field Mapping</label>
    <pluralLabel>PAID Product Field Mappings</pluralLabel>
</CustomObject>