paid/force-app/main/default/objects/PAID_Product_Field_Mapping__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>Default value to use if Salesforce field is null</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>