paid/force-app/main/default/objects/PAID_Product_Field_Mapping__mdt/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this field is required for API validation</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>