paid/force-app/main/default/objects/PAID_Product_Field_Mapping__mdt/fields/PAID_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>PAID_Field_Name__c</fullName>
    <description>Field name in PAID API JSON payload (e.g., name, chargeType, unitPrice)</description>
    <label>PAID Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>