paid/force-app/main/default/objects/PAID_Product_Field_Mapping__mdt/fields/Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field__c</fullName>
    <description>Nested object path in JSON (e.g., ProductAttribute, ProductAttribute.pricing, ProductAttribute.pricing.PricePoints.tiers)</description>
    <label>Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>