paid/force-app/main/default/objects/PAID_Product_Field_Mapping__mdt/fields/Salesforce_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_API_Name__c</fullName>
    <description>API name of the field in Salesforce (e.g., Name, SBQQ__ChargeType__c)</description>
    <label>Salesforce Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>