paid/force-app/main/default/objects/PAID_Product_Field_Mapping__mdt/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <description>Salesforce object name</description>
    <label>Salesforce Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>