paid/force-app/main/default/objects/PAID_Product_Field_Mapping__mdt/fields/Transformation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Rule__c</fullName>
    <description>Business logic transformation to apply to field value</description>
    <label>Transformation Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>ChargeTypeMapping</fullName>
            </value>
            <value>
                <fullName>PricingModelMapping</fullName>
            </value>
            <value>
                <fullName>CurrencyDefault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>