paid/force-app/main/default/objects/PAID_Product_Field_Mapping__mdt/listViews/All_View.listView-meta.xml
<ListView>
    <fullName>All_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Salesforce_Object__c</columns>
    <columns>Parent_Field__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All View</label>
</ListView>